testing install script

--- a/README.org
+++ b/README.org
@@ -54,16 +54,9 @@
   from within the directory, which you need to clone from github first. Vice
   versa it can be completely removed by removing the cloned directory.
 
-  harp_scale_trainer is written in ruby, so you need ruby installed and 
-  the non-standard Gem: sys-proctable
-
-  Moreover it relies on several external programs for its operation, e.g.:
-  aubiopitch, pulseaudio, aplay, arecord, sox, figlet and gnuplot. Their
-  existence is checked on program start.
-  
-  Special thanx to aubiopitch for doing all the heavy-lifting of tone
-  recognition !
+  harp_scale_trainer has a bunch of dependencies and the script
+  install-dependencies-on-ubuntu.sh may be used to install them in a single
+  run.
 
   For MS Windows, version 11, you may use the latest windows-Subsystem for
   Linux wslg, which supports sound through the remote desktop protocol.
-
