--- a/tests/installer/README.org
+++ b/tests/installer/README.org
@@ -1,8 +1,12 @@
 Build a docker image with
 
-  docker build -f build-with-script -t --progress=plain --no-cache harp_scale_trainer:latest .
+  docker build -f build-with-script --progress=plain --no-cache -t harp_scale_trainer:latest $HOME
 
-if successful, this will show the usage message of the program
+if successful, run the image and see the usage information:
 
-This process clones the repository from github, so any local changes
-need to be committed first.
+  docker run -it harp_scale_trainer:latest
+
+this proves, that the script install-dependencies-on-ubuntu.sh does work.
+
+harp_scale_trainer itself however, cannot run from within a container
+without setting up the sound-system manually.
