--- a/tests/installer/README.org
+++ b/tests/installer/README.org
@@ -1,12 +1,22 @@
-Build a docker image with
+Build a docker image with:
 
-  docker build -f build-with-script --progress=plain --no-cache -t harp_scale_trainer:latest $HOME
+  docker build -f dockerfile.ubuntu --progress=plain --no-cache -t harp_scale_trainer_ubuntu:latest $HOME
 
-if successful, run the image and see the usage information:
+or 
 
-  docker run -it harp_scale_trainer:latest
+  docker build -f dockerfile.fedora --progress=plain --no-cache -t harp_scale_trainer_fedora:latest $HOME
 
-this proves, that the script install-dependencies-on-ubuntu.sh does work.
+
+if successful, run the image and verify the usage information:
+
+  docker run -it harp_scale_trainer_ubuntu:latest
+
+or
+
+  docker run -it harp_scale_trainer_centos:latest
+
+
+this proves, that the scripts for installing dependencies from directory install do work.
 
 harp_scale_trainer itself however, cannot run from within a container
 without setting up the sound-system manually.
