--- a/tests/installer/README.org
+++ b/tests/installer/README.org
@@ -1,22 +1,31 @@
-Build a docker image with:
+Testing the scripts from directory install is done via docker.
 
-  docker build -f dockerfile.ubuntu --progress=plain --no-cache -t harp_scale_trainer_ubuntu:latest $HOME
+* Build a docker image
 
-or 
+    docker build -f dockerfile.ubuntu --progress=plain --no-cache -t harp_scale_trainer_ubuntu:latest $HOME
 
-  docker build -f dockerfile.fedora --progress=plain --no-cache -t harp_scale_trainer_fedora:latest $HOME
+  or 
 
-
-if successful, run the image and verify the usage information:
-
-  docker run -it harp_scale_trainer_ubuntu:latest
-
-or
-
-  docker run -it harp_scale_trainer_centos:latest
+    docker build -f dockerfile.fedora --progress=plain --no-cache -t harp_scale_trainer_fedora:latest $HOME
 
 
-this proves, that the scripts for installing dependencies from directory install do work.
+* Run the image 
 
-harp_scale_trainer itself however, cannot run from within a container
-without setting up the sound-system manually.
+  and verify the usage information:
+
+    docker run -it harp_scale_trainer_ubuntu:latest
+
+  or
+
+    docker run -it harp_scale_trainer_fedora:latest
+
+
+  this proves, that the scripts for installing dependencies from
+  directory install do work.
+
+  (add '--entrypoint /bin/bash' to investigate, if not)
+
+* However
+
+  harp_scale_trainer itself however, cannot run from within a container
+  without setting up the sound-system manually.
