--- a/README.org
+++ b/README.org
@@ -94,7 +94,7 @@
    - The interval to the previous note or the stored reference
    - Cents deviation of the current frequency to the reference
 
-** The frequency scale
+** The frequency gauge
 
    Currently it looks like this:
 
