--- a/README.org
+++ b/README.org
@@ -103,14 +103,14 @@
    The middle position (marked by ":") represents the frequency, that was
    found during calibration. If you have done an automatic calibration,
    this frequency might not match what you are actually playing (marked by
-   "|"); consider a manual calibration with your actual harp in such a
+   "I"); consider a manual calibration with your actual harp in such a
    case.
 
    The left and right position (marked by "[." and ".]") represent the
-   point, where the displayed note would change; typically this is half
-   way to the next note. After reaching which (e.g. while bending), the
-   displayed cursor ("|") will jump to the other side to approach the
-   central position again.
+   point, where the displayed note would change: half way to the next
+   hole. After reaching which (e.g. while bending), the gauge will change,
+   the ":" will represent the next hole and the displayed cursor ("I")
+   will jump to the other side to approach the central position again.
 
 * Configuration
 
